--- a/CustomerPortal/appsettings.json
+++ b/CustomerPortal/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "dbConnectionString": "server=rmit.australiaeast.cloudapp.azure.com; Encrypt=False;uid=s4072738_a1;database=s4072738_a1;pwd=abc123",
+    "webApiConnectionString": "https://coreteaching01.csit.rmit.edu.au/~e103884/wdt/services/customers/"
+  }
 }
