--- a/CustomerPortal/CustomerPortal.csproj
+++ b/CustomerPortal/CustomerPortal.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SimpleHashing.Net" Version="2.1.0" />
+  </ItemGroup>
+
 </Project>
