--- a/CustomerPortal/CustomerPortal.csproj
+++ b/CustomerPortal/CustomerPortal.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="SimpleHashing.Net" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utility\" />
+  </ItemGroup>
+
 </Project>
