--- a/CustomerPortal/.gitignore
+++ b/CustomerPortal/.gitignore
@@ -12,3 +12,7 @@ project.fragment.lock.json
 # VS & VS Code settings
 .vscode/
 .vs/
+
+#configs changes
+./appsettings.json
+./appsettings.Development.json
