--- a/CustomerPortal/CustomerPortal.csproj
+++ b/CustomerPortal/CustomerPortal.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Utility\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
