--- a/CustomerPortal/Properties/launchSettings.json
+++ b/CustomerPortal/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7283;http://localhost:5087",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HTTPS_PORT": "7283"
       }
     }
   }
