--- a/CustomerPortal/appsettings.json
+++ b/CustomerPortal/appsettings.json
@@ -7,7 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "dbConnectionString": "server=rmit.australiaeast.cloudapp.azure.com; Encrypt=False;uid=s4119687_a2;database=s4119687_a2;pwd=abc123",
+    "dbConnectionString": "server=rmit.australiaeast.cloudapp.azure.com; Encrypt=False;uid=s4072738_a2;database=s4072738_a2;pwd=abc123",
     "webApiConnectionString": "https://coreteaching01.csit.rmit.edu.au/~e103884/wdt/services/customers/"
+  },
+  "TransactionFees": {
+    "withdrawal": 0.01,
+    "transfer": 0.05
   }
 }
