--- a/AdminApi/appsettings.json
+++ b/AdminApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CustomerMcbaContext": "server=rmit.australiaeast.cloudapp.azure.com; Encrypt=False;uid=s4119687_a2;database=s4119687_a2;pwd=abc123",
+    "webApiConnectionString": "https://coreteaching01.csit.rmit.edu.au/~e103884/wdt/services/customers/"
+  }
 }
