--- a/AdminApi/appsettings.json
+++ b/AdminApi/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CustomerMcbaContext": "server=rmit.australiaeast.cloudapp.azure.com; Encrypt=False;uid=s4119687_a2;database=s4119687_a2;pwd=abc123",
+    "CustomerMcbaContext": "server=rmit.australiaeast.cloudapp.azure.com; Encrypt=False;uid=s4119687_a1;database=s4119687_a1;pwd=abc123",
     "webApiConnectionString": "https://coreteaching01.csit.rmit.edu.au/~e103884/wdt/services/customers/"
+  },
+  "AdminAuth": {
+    "Username": "admin",
+    "Password": "admin"
+    
   }
 }
