implement admin login and jwt token based authentication

--- a/AdminApi/appsettings.json
+++ b/AdminApi/appsettings.json
@@ -13,6 +13,10 @@
   "AdminAuth": {
     "Username": "admin",
     "Password": "admin"
-    
+  },
+  "Jwt": {
+    "Issuer": "Mcba.AdminApi",
+    "Audience": "Mcba.AdminPortal",
+    "AccessTokenMinutes": 60
   }
 }
