--- a/AdminApi/appsettings.json
+++ b/AdminApi/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CustomerMcbaContext": "server=rmit.australiaeast.cloudapp.azure.com; Encrypt=False;uid=s4072738_a2;database=s4072738_a2;pwd=abc123",
-    "webApiConnectionString": "https://coreteaching01.csit.rmit.edu.au/~e103884/wdt/services/customers/"
+    "CustomerMcbaContext": "server=rmit.australiaeast.cloudapp.azure.com; Encrypt=False;uid=s4072738_a2;database=DB_NAME;pwd=PASS",
+    "webApiConnectionString": "CONNECTIONSTRING/services/customers/"
   },
   "AdminAuth": {
     "Username": "admin",
